<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".SecondActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/main_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar1" />




    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/settings_text1"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="115dp" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/vector"
                android:backgroundTint="@color/main_background"
                android:layout_weight="@integer/material_motion_duration_long_1"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="30dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/settings_text2"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="115dp" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/vector"
                android:backgroundTint="@color/main_background"
                android:layout_weight="@integer/material_motion_duration_long_1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="30dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/settings_text3"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="115dp" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/vector"
                android:backgroundTint="@color/main_background"
                android:layout_weight="@integer/material_motion_duration_long_1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="30dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/settings_text4"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="115dp" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/vector"
                android:backgroundTint="@color/main_background"
                android:layout_weight="@integer/material_motion_duration_long_1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/rectangle1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/list_button1" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/alarm_button1" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/calendar_button1" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/settings_button1" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>